rook-cluster/ceph-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: rook-ceph-mgr-dashboard
  namespace: rook-cluster
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: "Host(`ceph.${clusterdomain:=undefined}`)"
    services:
    - kind: Service
      name: rook-ceph-mgr-dashboard
      namespace: rook-ceph
      port: 8443
      serversTransport: allowselfsigned
  tls: {}
